 * Use new modal dialog component for privacy settings modal (Sage Abdullah)
 * Add `menu_item_name` to modify MenuItem's name for ModelAdmin (Alexander Rogovskyy, Vu Pham)
 * Add an extra confirmation prompt when deleting pages with a large number of child pages (Jaspreet Singh)
 * Adopt the slim header in page listing views, with buttons moved under the "Actions" dropdown (Paarth Agarwal)
 * Fix: Typo in `ResumeWorkflowActionFormatter` message (Stefan Hammer)
 * Fix: Throw a meaningful error when saving an image to an unrecognised image format (Christian Franke)
 * Fix: Remove extra padding for headers with breadcrumbs on mobile viewport (Steven Steinwand)
 * Fix: Ensure that custom document or image models support custom tag models (Matt Westcott)
 * Fix: Ensure comments use translated values for their placeholder text (Stefan Hammer)
 * Fix: Ensure the upgrade notification, shown to admins on the dashboard if Wagtail is out of date, content is translatable (LB (Ben) Johnston)
 * Fix: Show the re-ordering option to users that have permission to publish pages within the page listing (Stefan Hammer)
 * Fix: Ensure default sidebar branding (bird logo) is not cropped in RTL mode (Steven Steinwand)
 * Fix: Add an accessible label to the image focal point input when editing images (Lucie Le Frapper)
 * Fix: Remove unused header search JavaScript on the redirects import page (LB (Ben) Johnston)
 * Fix: Ensure non-square avatar images will correctly show throughout the admin (LB (Ben) Johnston)
 * Fix: Ignore translations in test files and re-include some translations that were accidentally ignored (Stefan Hammer)
 * Fix: Show alternative message when no page types are available to be created (Jaspreet Singh)
 * Fix: Prevent error on sending notifications for the legacy moderation process when no user was specified (Yves Serrano)