@@ -95,6 +95,7 @@ Wagtail’s page preview is now available in a side panel within the page editor
  * Add `menu_item_name` to modify MenuItem's name for ModelAdmin (Alexander Rogovskyy, Vu Pham)
  * Add an extra confirmation prompt when deleting pages with a large number of child pages (Jaspreet Singh)
  * Adopt the slim header in page listing views, with buttons moved under the "Actions" dropdown (Paarth Agarwal)
+ * Improve help block styles in Windows High Contrast Mode with less reliance on communication via colour alone (Anuja Verma)
 
 ### Bug fixes
 
